--- a/src/ShopManager/tamplates/index.html
+++ b/src/ShopManager/tamplates/index.html
@@ -5,8 +5,8 @@
     <title>First Django server</title>
 </head>
 <body>
-{#{% for shop in shops %}#}
-{#    <h1>{{ shop.name }}</h1>#}
-{#{% endfor %}#}
+{% for shop in shops %}
+    <h1>{{ shop.name }}</h1>
+{% endfor %}
 </body>
 </html>
