--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/jquery-ui.theme.min.css" rel="stylesheet" />
+        <link href="css/jquery-ui.min.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -237,6 +237,9 @@
                 </ul>
             </div>
         </section>
+        <div class="text-center">
+            <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger"  id="hideShow" href="#portfolio" >Hide</a>
+        </div>
         <!-- Team-->
         <section class="page-section bg-light" id="team">
             <div class="container">
@@ -288,7 +291,7 @@
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                <form id="contactForm" name="sentMessage" >
                     <div class="row align-items-stretch mb-5">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -312,8 +315,7 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <div id="success"></div>
-                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
+                        <a class="btn btn-primary btn-xl text-uppercase"  id="sendMessageButton" >Contact US</a>
                     </div>
                 </form>
             </div>
@@ -521,13 +523,13 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <!-- Contact form JS-->
-        <script src="assets/mail/jqBootstrapValidation.js"></script>
-        <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
         <script src="js/jquery-3.5.1.min.js"></script>
         <script src="js/jquery-ui.min.js"></script>
 
+        <div class="dialog" title="Данні" hidden="hidden">
+            <p>Ваше замовлення відправлено на оброблення. Очікуйте підтвердження</p>
+        </div>
     </body>
 </html>
