Add button 'bold text',hide/show, and scaling for hovering in portfolio

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item"><h2 id="bold-menu"><b>B</b></h2></li>
                     </ul>
                 </div>
             </div>
@@ -519,17 +520,16 @@
             </div>
         </div>
         <!-- Bootstrap core JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-        <script src="js/jquery-3.5.1.min.js"></script>
+        <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/jquery-ui.min.js"></script>
+        <script src="js/jquery.dmenu.js"></script>
 
-        <div class="dialog" title="Данні" hidden="hidden">
-            <p>Ваше замовлення відправлено на оброблення. Очікуйте підтвердження</p>
-        </div>
+
     </body>
 </html>
